Fixing few Safari layout bugs
Fixing few Safari layout bugs, compressing and netlify deploying

--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -191,7 +191,6 @@ textarea {
   display: inline-block;
   vertical-align: middle;
   white-space: normal;
-  background: none;
 }
 
 /* Remove the stupid outer glow in Webkit */
