--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -24,7 +24,3 @@ body {
 .blue-text {
   color: var(--clr-blue-default);
 }
-
-.white-text {
-  color: var(--clr-white);
-}
