--- a/sass/layouts/_section-contacts.scss
+++ b/sass/layouts/_section-contacts.scss
@@ -95,11 +95,12 @@
 
       @include respond(tab-portrait) {
         padding: 0;
+        max-width: 99.5vw;
       }
 
       @include respond(phone) {
         gap: 3.8rem;
-        max-width: 100vw;
+        overflow-x: hidden;
       }
 
       &::-webkit-scrollbar {
