--- a/styles/style.css
+++ b/styles/style.css
@@ -205,8 +205,7 @@ textarea {
   padding: 0;
   display: inline-block;
   vertical-align: middle;
-  white-space: normal;
-  background: none; }
+  white-space: normal; }
 
 /* Remove the stupid outer glow in Webkit */
 input:focus {
@@ -472,9 +471,6 @@ body {
 
 .blue-text {
   color: var(--clr-blue-default); }
-
-.white-text {
-  color: var(--clr-white); }
 
 .logo {
   background-image: url("/img/common/logo.svg");
@@ -1358,6 +1354,10 @@ body {
     position: relative;
     background: url("/img/header/slider/bullet-inactive.svg");
     margin: var(--swiper-pagination-bullet-vertical-gap, 20px) 0 !important; }
+    @media only screen and (max-width: 48em) {
+      .header-slider__bullet-inactive {
+        margin: var(--swiper-pagination-bullet-vertical-gap, 8px) 0 !important;
+        right: 0.65rem; } }
   .header-slider__nav-buttons {
     position: absolute;
     height: 27.2rem;
@@ -1550,7 +1550,6 @@ body {
   grid-template-rows: repeat(3, min-content);
   row-gap: 4rem;
   padding: 4.8rem 3.2rem;
-  z-index: 2;
   background-color: var(--clr-white);
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.25);
   border-radius: 5.6rem;
@@ -1561,12 +1560,12 @@ body {
   @media only screen and (max-width: 48em) {
     .form {
       grid-template-columns: 68.2rem;
-      padding-bottom: 6rem; } }
+      padding: 4.8rem 3.2rem 10rem 3.2rem; } }
   @media only screen and (max-width: 20em) {
     .form {
       grid-template-columns: 26.45rem;
       height: 65.2rem;
-      padding: 3.2rem 1.6rem;
+      padding: 3.2rem 1.6rem 6rem 1.6rem;
       border-radius: 2.4rem; } }
   .form button {
     position: relative;
@@ -1604,7 +1603,8 @@ body {
     grid-column: 1 / -1;
     grid-row: 1 / 2;
     font-size: var(--font-size-medium-2);
-    text-align: center; }
+    text-align: center;
+    white-space: nowrap; }
     @media only screen and (max-width: 20em) {
       .form-user-info__heading {
         position: relative;
@@ -1612,31 +1612,37 @@ body {
         right: -0.2rem;
         font-size: var(--font-size-medium-3);
         line-height: 2.8rem;
-        letter-spacing: 0.4px; } }
+        letter-spacing: 0.4px;
+        white-space: normal; } }
   .form-user-info__name, .form-user-info__tel, .form-user-info__email, .form-user-info__comment {
     padding-left: 2.4rem;
     border-radius: 2.4rem;
     box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.15);
-    border: none;
+    -webkit-box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.15);
     position: relative;
-    color: var(--clr-blue-dark); }
+    color: var(--clr-blue-dark);
+    appearance: none;
+    -webkit-appearance: none; }
     .form-user-info__name::placeholder, .form-user-info__tel::placeholder, .form-user-info__email::placeholder, .form-user-info__comment::placeholder {
       font-weight: 300;
       color: var(--clr-blue-dark); }
   .form-user-info__name {
     grid-column: 1 / 2;
+    grid-row: 2 / 3;
     top: 0.3rem; }
     @media only screen and (max-width: 20em) {
       .form-user-info__name {
         top: 0.8rem; } }
   .form-user-info__tel {
     grid-column: 1 / 2;
+    grid-row: 3 / 4;
     top: 0.1rem; }
     @media only screen and (max-width: 20em) {
       .form-user-info__tel {
         top: 0.2rem; } }
   .form-user-info__email {
-    grid-column: 1 / 2; }
+    grid-column: 1 / 2;
+    grid-row: 4 / 5; }
     @media only screen and (max-width: 20em) {
       .form-user-info__email {
         top: -0.25rem; } }
@@ -1969,7 +1975,8 @@ General, pictures and download button
   grid-template-columns: 59rem 1fr;
   column-gap: 21rem;
   padding-top: 9.4rem;
-  box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.15); }
+  box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.15);
+  overflow: hidden; }
   @media only screen and (max-width: 79.6875em) {
     .section-about {
       grid-template-columns: 17.6rem 1fr;
@@ -2452,20 +2459,18 @@ Fourth bubble
       .section-professional__advantages-list li:nth-child(4) span {
         top: -0.8rem; } }
 
-.section-professional__advantages-list li:nth-child(1),
-.section-professional__advantages-list li:nth-child(2),
-.section-professional__advantages-list li:nth-child(3),
-.section-professional__advantages-list li:nth-child(4) {
-  /*   @include respond(phone) {
-    right: 0;
-    left: 0;
-  } */ }
+@media only screen and (max-width: 48em) {
+  .section-professional__advantages-list li:nth-child(1),
+  .section-professional__advantages-list li:nth-child(2),
+  .section-professional__advantages-list li:nth-child(3),
+  .section-professional__advantages-list li:nth-child(4) {
+    top: 0; } }
+
+.section-professional__white-text {
+  color: var(--clr-white); }
   @media only screen and (max-width: 48em) {
-    .section-professional__advantages-list li:nth-child(1),
-    .section-professional__advantages-list li:nth-child(2),
-    .section-professional__advantages-list li:nth-child(3),
-    .section-professional__advantages-list li:nth-child(4) {
-      top: 0; } }
+    .section-professional__white-text {
+      color: inherit; } }
 
 /* 
 General, text and buttons
@@ -2751,11 +2756,12 @@ Van picture
           gap: 2.2rem; } }
       @media only screen and (max-width: 48em) {
         .section-contacts__list-container ul {
-          padding: 0; } }
+          padding: 0;
+          max-width: 99.5vw; } }
       @media only screen and (max-width: 20em) {
         .section-contacts__list-container ul {
           gap: 3.8rem;
-          max-width: 100vw; } }
+          overflow-x: hidden; } }
       .section-contacts__list-container ul::-webkit-scrollbar {
         width: 0.8rem;
         background-color: var(--clr-white);
